# wireless-bridge-ros2

./: CLAUDE.md  CMakeLists.txt  package.xml
config/: bridge.yaml  bridge_a.yaml  bridge_b.yaml  radio_bridge_params.yaml
launch/: bridge_launch.py  sim_bridge_launch.py
scripts/: bridge_core.py  comms_device.py  dummy_publisher.py  radio_bridge.py  radio_manager.py  ros_topic_device.py
